# predictor-mundial-2026

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  PLAN_FASE2.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily-refresh.yml
.streamlit/: config.toml
app/: __init__.py  charts.py  data.py  streamlit_app.py  theme.py
data/: __init__.py  apifootball.py  fixture.py  ingest.py  scorers.py
data/reference/: bracket_2026.json  groups.json  venues.json
data/snapshot/: backtest_calibration.parquet  backtest_summary.parquet  elo_current.parquet  goal_model_params.json  goal_model_strengths.parquet  golden_boot.parquet  group_standings.parquet  knockout_results.parquet  market_comparison.parquet  match_markets.parquet  match_scorers.parquet  predicted_vs_actual.parquet  predicted_vs_actual_meta.json  (+5 more)
market/: __init__.py  ingest.py  odds.py
model/: __init__.py  elo.py  extras.py  goals.py  markets.py  props.py  scorers.py
scripts/: __init__.py  build_capa2_data.py  build_data.py  build_market.py  build_model.py  build_predicted_vs_actual.py  build_props.py  build_scorers.py  build_simulation.py  build_validation.py  build_value.py  freeze_snapshot.py  refresh.py
tests/: test_apifootball.py  test_elo.py  test_fixture.py  test_goals.py  test_ingest.py  test_live.py  test_market.py  test_markets.py  test_props.py  test_scorers.py  test_smoke.py  test_tournament.py  test_validation.py  test_value.py
tournament/: __init__.py  format2026.py  montecarlo.py
validation/: __init__.py  backtest.py  metrics.py
value/: __init__.py  backtest.py  ev.py
